--- a/.gitignore
+++ b/.gitignore
@@ -77,5 +77,12 @@ output/
 # Summary files (can be regenerated)
 summary.json
 
-# Stress test results (generated)
-stress_test_results.json
+# Stress test files (generated/test scripts)
+stress_test*.json
+stress_test*.py
+new_swmm_test_results.json
+new_swmm_validation_report.json
+test_new_swmm_files.py
+test_fixed_encoding_files.py
+remove_failed_files.py
+test_new_swmm_output.log
